# intrex-digital-hub

./: .dockerignore  .editorconfig  .env.example  .gitignore  .htaccess  .last_firestore_sync  .pre-commit-config.yaml  .stylelintrc.json  Dockerfile  Makefile  Procfile  README.md  _sqlite_check.py  build.sh  create_admin.py  cron_tasks.sh  docker-compose.yml  eslint.config.js  package-lock.json  package.json  passenger_wsgi.py  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt  start.sh  vite.config.js
Old Website/: billing-dashboard.html  dashboard.html  hr-dashboard.html  index.html  investment-dashboard.html  solution-dashboard.html  training-dashboard.html  training.html  verify-certificate.html
accounts/: admin.py  auth_backend.py  context_processors.py  decorators.py  middleware.py  models.py  rate_limit.py  signals.py  tests.py  urls.py  views.py
billing/: admin.py  models.py  services.py  tests.py  urls.py  views.py
config/: __init__.py  api.py  bootstrap.py  celery.py  contacts_helper.py  context_processors.py  drf_exception_handler.py  exceptions.py  firebase.py  firestore_utils.py  logger.py  middleware.py  settings.py  spa_middleware.py  tasks.py  tenants.py  urls.py  views.py  workflow_integration.py
docs/: implementation-plan-phase-5-9.md
docs-portal/: mkdocs.yml
frontend/: views.py
hrm/: admin.py  analytics_views.py  apps.py  audit.py  models.py  portal_views.py  services.py  tests.py  urls.py  validators.py  views.py  views_helpers.py
inventory/: admin.py  models.py  services.py  tests.py  views.py
investment/: admin.py  (+10 more)
(+301 files in other folders)
